Fix spacing

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -139,6 +139,10 @@ body > div > table > thead > tr > th{
   margin-top:20px;
 }
 
+.field4 {
+  margin-top:60px;
+}
+
 .form-control {
   max-width: 350px;
 }
